# Craft

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile.common  Makefile.libretro  README.md  craft_libretro_ios.dylib  patch.diff  server.py
jni/: Android.mk  Application.mk
libretro/: libretro.c  libretro.h  main_libretro.c
src/: auth.c  client.c  config.h  cube.c  db.c  db.h  item.c  libretro.c  main.c  map.c  map.h  matrix.c  renderer.c  renderer.h  ring.c  sign.c  util.c  util.h  world.c
textures/: font_texture.h  sign_texture.h  sky_texture.h  tiles_texture.h
